# safeguard

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  mapping-config.example.json
.github/workflows/: go.yaml  node.js.yml  release.yaml
cmd/builder/: README.md  debug_unix.go  debug_windows.go  example-build.ps1  generate_ui.sh  main.go  test-config.json  test-ldap-with-creds.json  test-token-with-creds.json
cmd/builder/ui/: eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts
cmd/builder/ui/src/: App.tsx  styles.css  types.ts
cmd/builder/ui/src/components/: BuildProgressModal.test.tsx  BuildProgressModal.tsx  CollapsibleSection.test.tsx  CollapsibleSection.tsx  EnvCheckModal.test.tsx  EnvCheckModal.tsx  EnvironmentCheck.test.tsx  EnvironmentCheck.tsx  FormGroup.test.tsx  FormGroup.tsx  StepProgress.test.tsx  StepProgress.tsx  Tooltip.test.tsx  Tooltip.tsx
cmd/builder/ui/src/pages/: BuildPage.test.tsx  BuildPage.tsx
cmd/builder/ui/src/pages/sections/: AccessControlSection.test.tsx  AccessControlSection.tsx  BuildMetadataSection.tsx  BuildOptionsSection.tsx  BuildSections.test.tsx  CheckEnvSection.test.tsx  CheckEnvSection.tsx  CodeSigningSection.tsx  ConnectionAuthSection.test.tsx  ConnectionAuthSection.tsx  LoggingSection.test.tsx  LoggingSection.tsx  MountPathsSection.test.tsx  MountPathsSection.tsx  (+2 more)
cmd/builder/ui/src/stores/: steps.test.ts  steps.ts  useBuildForm.ts
cmd/builder/ui/src/test/: helpers.ts  setup.ts
cmd/builder/ui/src/utils/: helpers.test.ts  helpers.ts
cmd/cli/: auth.go  config.go  config_test.go  embedded_policies.go  flags.go  fs.go  helpers.go  main.go  main_test.go
docs/: BAZEL_BUILD.md  MOUNT_DISCOVERY.md  PATH_MAPPING.md  PLATFORM_GUIDE.md  POLICY_QUICKSTART.md  PROCESS_MONITORING.md  QUICKSTART.md  SETUP_SCRIPTS.md  SSO_INTEGRATION.md  TESTING.md  URL_POLICY_GUIDE.md
examples/: mapping-config.example.json  path-mapping-example.md
pkg/auth/: BUILD.bazel  authenticator.go  authenticator_test.go  noop.go  noop_test.go  provider.go
pkg/builder/: builder.go  builder_test.go
pkg/filesystem/: BUILD.bazel  pathmapper.go  pathmapper_test.go  policy.go  policy_test.go  procinfo.go  procinfo_test.go  procinfo_unix.go  procinfo_windows.go  vaultfs.go  vaultfs_access_test.go  vaultfs_test.go
pkg/logger/: BUILD.bazel  logger.go  logger_test.go  splunk_writer.go  splunk_writer_test.go
pkg/utils/: common.go  common_test.go
pkg/vault/: BUILD.bazel  cache.go  cache_test.go  interface.go
pkg/vault/adapter/: awssm.go  azurekv.go  gcpsm.go  hashicorp.go  hashicorp_test.go  registry.go  registry_test.go
policies/: README.md  allow-specific-processes.rego  allow-specific-users.rego  complex-example.rego  path-based-access.rego  test-url-policy.rego  time-based-access.rego
policies/modular-example/: 00-base.rego  10-admin.rego  20-developer.rego  30-applications.rego  40-public.rego  99-deny.rego  README.md  RESULT_OBJECT.md
scripts/: README.md  setup-vault.bat  setup-vault.ps1  setup-vault.sh  stop-vault.bat  stop-vault.ps1  stop-vault.sh
