load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "auth",
    srcs = [
        "authenticator.go",
        "noop.go",
        "provider.go",
    ],
    importpath = "safeguard/pkg/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/logger",
        "@com_github_pkg_browser//:browser",
    ],
)

go_test(
    name = "auth_test",
    srcs = ["authenticator_test.go"],
    embed = [":auth"],
)
