load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logger",
    srcs = ["logger.go"],
    importpath = "safeguard/pkg/logger",
    visibility = ["//visibility:public"],
    deps = ["@com_github_rs_zerolog//:zerolog"],
)

go_test(
    name = "logger_test",
    srcs = [],
    embed = [":logger"],
)
