load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vault",
    srcs = [
        "interface.go",
    ],
    importpath = "safeguard/pkg/vault",
    visibility = ["//visibility:public"],
)

go_test(
    name = "vault_test",
    srcs = [],
    embed = [":vault"],
)
